- add endpoint to return all supported currencies and countries
